--- a/package.json
+++ b/package.json
@@ -10,7 +10,19 @@
   "author": "Francis Masha <francismasha96@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5"
-  }
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
+  },
+  "alias": {
+    "node_modules": "./node_modules"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not dead"
+  ]
 }
