feat(config): update packages

--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,24 @@
 {
   "presets": [
-    "env",
-    "react"
+    "@babel/preset-env",
+    "@babel/preset-react"
   ],
   "plugins": [
     "add-module-exports",
-    ["module-resolver", {
-      "root": ["./src"],
-      "alias": {
-        "components": "./src/components/",
-        "pages": "./src/pages/",
-        "modules": "./src/store/modules/",
-        "utils": "./src/utils/"
+    [
+      "module-resolver",
+      {
+        "root": [
+          "./src"
+        ],
+        "alias": {
+          "@component": "./src/components/",
+          "@pages": "./src/pages/",
+          "@placeholders": "./src/placeholders/",
+          "@modules": "./src/store/modules/",
+          "@utils": "./src/utils/"
+        }
       }
-    }]
+    ]
   ]
 }
