--- a/package.json
+++ b/package.json
@@ -3,96 +3,122 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start:dev": "webpack-dev-server --config config/webpack.dev.js --mode development --host almond.com",
+    "start:dev": "webpack-dev-server --config config/webpack.dev.js --mode development --host awesome-react.com",
     "start:prod": "node server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "eslint": "eslint --report-unused-disable-directives --format codeframe '**/*.{js,jsx,ts,tsx,json}'",
+    "eslint:fix": "yarn eslint --fix",
+    "lint:scss": "stylelint --fix",
+    "lint:ts": "eslint --ext=jsx,ts,tsx src",
+    "stylelint": "stylelint '**/*.*(css|scss)'",
+    "stylelint:fix": "yarn stylelint --fix"
   },
   "repository": "https://github.com/mashafrancis/webpack-starter.git",
   "author": "Francis Masha <francismasha96@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/react": "^16.9.13",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.3",
-    "autoprefixer": "^9.7.2",
-    "axios": "^0.19.0",
-    "browserslist": "^4.7.3",
-    "canvas": "^2.6.0",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "autoprefixer": "^9.8.4",
+    "axios": "^0.19.2",
+    "browserslist": "^4.12.2",
+    "canvas": "^2.6.1",
     "classnames": "^2.2.6",
     "cookies-js": "^1.2.3",
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "history": "^4.10.1",
-    "html2canvas": "^1.0.0-rc.3",
+    "history": "^5.0.0",
+    "html2canvas": "^1.0.0-rc.5",
     "jwt-decode": "^2.2.0",
-    "moment": "^2.24.0",
+    "moment": "^2.27.0",
     "moxios": "^0.4.0",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
-    "rc-progress": "^2.5.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "rc-progress": "^3.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
     "react-load-script": "^0.0.6",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "sass-rem": "^2.0.1",
-    "start-server-and-test": "^1.10.6",
-    "typescript": "^3.7.2",
+    "start-server-and-test": "^1.11.0",
+    "typescript": "^3.9.5",
     "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
-    "@types/enzyme": "^3.10.3",
-    "@types/jest": "^24.0.23",
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@commitlint/cli": "^9.0.1",
+    "@commitlint/config-conventional": "^9.0.1",
+    "@types/enzyme": "^3.10.5",
+    "@types/jest": "^26.0.3",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
+    "babel-jest": "^26.1.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "^1.0.2",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "enzyme-to-json": "^3.4.3",
-    "eslint": "^6.7.1",
-    "file-loader": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.1.0",
+    "css-loader": "^3.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb-typescript": "^8.0.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.2",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "fibers": "^5.0.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
-    "jest": "^24.9.0",
-    "jest-resolve": "^24.9.0",
-    "lint-staged": "^9.5.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
+    "jest": "^26.1.0",
+    "jest-resolve": "^26.1.0",
+    "lint-staged": "^10.2.11",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^7.1.0",
+    "prettier": "^2.0.5",
+    "sass": "^1.26.9",
+    "sass-loader": "^8.0.2",
     "script-loader": "^0.7.2",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.0.0",
-    "stylelint": "^11.1.1",
-    "stylelint-config-sass-guidelines": "^6.1.0",
-    "stylelint-no-px": "^1.0.0",
-    "stylelint-order": "^3.1.1",
-    "stylelint-scss": "^3.12.1",
-    "ts-jest": "^24.2.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.5.3",
-    "tslint": "^5.20.1",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-jsdoc-rules": "^0.2.0",
+    "source-map-loader": "^1.0.0",
+    "style-loader": "^1.2.1",
+    "stylelint": "^13.6.1",
+    "stylelint-bare-webpack-plugin": "2.0.1",
+    "stylelint-config-css-modules": "2.2.0",
+    "stylelint-config-prettier": "8.0.2",
+    "stylelint-config-primer": "9.0.0",
+    "stylelint-config-recommended-scss": "4.2.0",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "stylelint-config-standard": "20.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "2.3.0",
+    "stylelint-group-selectors": "1.0.7",
+    "stylelint-high-performance-animation": "1.5.1",
+    "stylelint-no-indistinguishable-colors": "1.3.0",
+    "stylelint-no-px": "^1.0.1",
+    "stylelint-order": "^4.1.0",
+    "stylelint-prettier": "1.1.2",
+    "stylelint-scss": "^3.18.0",
+    "stylelint-use-nesting": "^3.0.0",
+    "ts-jest": "^26.1.1",
+    "ts-loader": "^7.0.5",
+    "ts-node": "^8.10.2",
     "typescript-eslint-parser": "^22.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "alias": {
     "node_modules": "./node_modules"
